--- a/src/app/home/intro/intro.component.html
+++ b/src/app/home/intro/intro.component.html
@@ -1,6 +1,6 @@
 <div class="container intro">
     <div class="right">
-        <h1><span id="lang">{{language}}</span> Tutors Online</h1>
+        <h1><span id="lang">Language</span> Tutors Online</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed egestas libero quis molestie vehicula.
             Aliquam rutrum dui in nunc blandit, nec mattis arcu cursus. Integer semper ac sapien eu condimentum.</p>
         <button class="btn">Get Started</button>
