--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar">
     <div class="container-fluid">
-        <ul class="nav nav-bar mr-auto flex-row">
+        <ul class="nav">
             <a class="navbar-brand" href="#">Elear</a>
         </ul>
-        <ul class="nav nav-bar mx-auto flex-row">
+        <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="">Home</a>
             </li>
@@ -11,7 +11,7 @@
                 <a class="nav-link" href="/tutors">Tutors</a>
             </li>
         </ul>
-        <ul class="nav navbar-nav ml-auto flex-row">
+        <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link">Login</a>
             </li>
