--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,21 @@
-@import "~bootstrap/dist/css/bootstrap.css";
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400&display=swap');
 $main-font: 'Open Sans', sans-serif;
 $title-font: 'Oswald', sans-serif;
 $main-color: #30475E;
 $secondary-color: #F05454;
-body { background-color: #F8F8F8;}
+body { 
+    background-color: #F8F8F8;
+    margin: 0;
+    padding: 0
+}
+button {border: none}
+.card {
+    background-color: #fff;
+    filter: drop-shadow(5px 5px 5px rgba(0,0,0, 25%));
+    border-radius: 10px;
+}
+.container { 
+    width: 90%;
+    margin:auto
+}
